fix fonts letter-spacing and cards title size

--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -171,7 +171,7 @@ $borderRaius: 20 + px;
         }
 
         &_bigger {
-            font-size: clamp(30px, 7vw, 64px);
+            font-size: 64px;
             letter-spacing: -0.06rem;
         }
     }
